# .github

./: .coderabbit.yaml  .gitignore  README.md  README_template.md  SETUP_GUIDE.md  SETUP_INSTRUCTIONS.md  github-projects-setup.md  pull_request_template.md  setup-github-wiki.sh  setup-labels.sh  setup-new-project.sh  新規プロジェクト作成手順.md
.cursor/: BUGBOT.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature-requirement.yml
.github/workflows/: codeql.yml
ISSUE_TEMPLATE/: bug-report.yml  change-request.yml  feature-requirement.yml  security-issue.yml  test-case.yml  ui-design-request.yml
setup/: setup-ci-workflows.sh  setup-dev-environment.sh  setup-git-hooks.sh  setup-project-structure.sh  setup-projects.sh
templates/common/: CONTRIBUTING.md  SECURITY.md
templates/python/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
templates/typescript/: .gitignore  README.md  biome.json  package.json  tsconfig.json  vitest.config.ts
wiki-templates/: ADR-Template.md  API-Design.md  Architecture.md  Test-Plan.md  test-case-template.xlsx
workflows/: meeting-integration.yml  weekly-report.yml
workflows-templates/: deploy-dev.yml  deploy-production.yml  deploy-staging.yml  lint-and-test-python.yml  lint-and-test-typescript.yml  security-scan.yml
